<resources>
    <string name="app_name">YouTravel</string>
    <string name="title_activity_login">Login</string>

    <!-- TODO: &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&& -->
    <!-- TODO: RUI -->

    <string name="front_descriptionApp">Organize your journeys, capture unforgettable moments, and create a stunning travel portfolio all in one place.</string>
    <string name="get_started">Get Started!</string>
    <string name="already_have_account">Already have an account?</string>

    <string name="description_plane">Learn more about our flight options and explore new destinations.</string>
    <string name="description_camera">Discover amazing photo opportunities and capture unforgettable moments.</string>
    <string name="description_group">Connect with other travelers and make unforgettable memories together.</string>


    <!-- TODO: RUI -->
    <!-- TODO: &&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&&& -->
    <!-- TODO: FERNANDO-->

    <string name="loginwelcome">Welcome back!</string>
    <string name="loginsignin">Let\'s sign you in</string>
    <string name="typePassword">Type your password</string>
    <string name="typeEmail">Type your email</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgetPassword">Forgot your password?</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="signUp">Sign up</string>
    <string name="signUp_phrase">Sign up and start sharing!</string>
    <string name="title_notifications">Notifications</string>
    <string name="takePhoto">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="newPost">Add a new photo</string>
    <string name="photoSentence">Choose your favorite picture, and showcase how awesome your photographic skills are!</string>
    <string name="preview">Preview</string>
    <string name="publish">Publish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="skipIntro">Skip Intro</string>
    <string name="next">Next</string>
    <string name="insertTitle">Insert Title</string>
    <string name="insertDescription">Insert Description</string>
    <string name="addLocation">Add a location</string>
    <string name="editProfile">Edit your profile</string>
    <string name="changePassword">New password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="changeUsername">New username</string>
    <string name="changeName">New name</string>
    <string name="confirmEdit">Confirm Edit</string>
    <string name="pic3">Get inspired by the community, find new ideas for your next trip in the mountains, and discover top-rated experiences.</string>
    <string name="pic2">Capture your moments and share them with friends. Let your photos tell your story.</string>
    <string name="pic1">Explore new places, experiences, and adventures. Discover the world through the eyes of your friends and fellow travelers.</string>
    <string name="pic4">Connect with nature. Follow friends and like-minded travelers to see their latest journeys.</string>
    <string name="changePicture">Change Photo</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="howPassword">Let me help you getting it back</string>
    <string name="enterEmail">Enter your email here</string>
    <string name="title_activity_map">Map</string>

    <!-- TODO: FERNANDO-->


</resources>