<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main15"
    tools:context=".Register">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:background="@null"
        app:srcCompat="@drawable/baseline_chevron_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        app:tint="@color/main100" />

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/signUp_phrase"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/main50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTextView"
        app:backgroundTint="@color/main100"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/name"
        android:padding="16dp"
        android:textColorHint="@color/main50"
        app:layout_constraintEnd_toStartOf="@+id/usernameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:backgroundTint="@color/main100"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/username"
        android:padding="16dp"
        android:textColorHint="@color/main50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameEditText"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:backgroundTint="@color/main100"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/main50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        app:backgroundTint="@color/main100"/>

    <LinearLayout
        android:id="@+id/ageAndNationalityContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText">

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/age"
            android:inputType="none"
            android:focusable="false"
            android:onClick="showDatePickerDialog"
            android:padding="16dp"
            android:textColorHint="@color/main50"
            app:backgroundTint="@color/main100" />

        <EditText
            android:id="@+id/nationalityEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/edit_text_background"
            android:focusable="false"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/country"
            android:inputType="none"
            android:onClick="showNationalityDialog"
            android:padding="16dp"
            android:textColorHint="@color/main50"
            app:backgroundTint="@color/main100"/>
    </LinearLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/signUp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="#FFFFFF"
        android:padding="16dp"
        app:backgroundTint="@color/main100"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ageAndNationalityContainer" />

    <TextView
        android:id="@+id/haveAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/already_have_account"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        android:textColor="@color/main100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpButton" />

</androidx.constraintlayout.widget.ConstraintLayout>