<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main15"
    tools:context=".login">

    <ImageButton
        android:id="@+id/buttonChevronLeft"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:background="@null"
        app:srcCompat="@drawable/baseline_chevron_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        app:tint="@color/main" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/loginwelcome"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/loginsignin"
        android:textColor="@color/main"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/typeEmail"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/main50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="395dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/typePassword"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/main50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginTop="470dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/forgetPassword"
        android:textColor="@color/main"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>