<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".UserEdit">

    <!-- Top AppBar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/textColorIntroTitle"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/editProfile"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/baseline_chevron_left_24"
            app:tint="@color/white" />
    </androidx.appcompat.widget.Toolbar>


    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textColorIntroTitle"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemIconTint="@color/white"
        app:labelVisibilityMode="unlabeled"
        style="@style/BottomNavigationTheme"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/changePassword"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/buttonColorPrimary"
        app:backgroundTint="@color/buttonColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText" />

    <EditText
        android:id="@+id/passwordEditText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/buttonColorPrimary"
        app:backgroundTint="@color/buttonColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/changeUsername"
        android:padding="16dp"
        android:textColorHint="@color/buttonColorPrimary"
        app:backgroundTint="@color/buttonColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditText" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/changeName"
        android:padding="16dp"
        android:textColorHint="@color/buttonColorPrimary"
        app:backgroundTint="@color/buttonColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarButton" />

    <Button
        android:id="@+id/avatarButton"
        style="@style/CustomButtonStyle"
        android:layout_width="167dp"
        android:layout_height="68dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="96dp"
        android:text="@string/changePicture"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/confirmEditButton"
        style="@style/CustomButtonStyle"
        android:layout_marginTop="100dp"
        android:text="@string/confirmEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>
