<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword"
    android:background="@color/background">



    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:background="@null"
        app:srcCompat="@drawable/baseline_chevron_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        app:tint="@color/buttonColorPrimary" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/forgotPassword"
        android:textColor="@color/textColorBlack"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/howPassword"
        android:textColor="@color/textColorIntroTitle"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/buttonColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:backgroundTint="@color/buttonColorPrimary"/>

    <Button
        android:id="@+id/buttonCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:padding="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textColor="@color/buttonTextPrimary"
        app:backgroundTint="@color/buttonColorPrimary"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        app:strokeColor="@color/buttonColorPrimary"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>