<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main15">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/main50"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newPost"
            android:textSize="24sp"
            android:textColor="@color/main100"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/baseline_chevron_left_24"
            app:tint="@color/main100"/>
    </androidx.appcompat.widget.Toolbar>

    <!-- Content container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photoSentence"
            android:textSize="24sp"
            android:textColor="@color/main100"
            android:gravity="center"/>

        <ImageView
            android:layout_width="170dp"
            android:layout_height="189dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_camera_alt_24"
            app:tint="@color/main100" />

        <Button
            android:id="@+id/button_take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/takePhoto"
            android:fontFamily="@font/poppins_medium"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/main100"
            app:cornerRadius="8dp"
            android:onClick="takePicture"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/button_choose_from_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/gallery"
            android:fontFamily="@font/poppins_medium"
            android:textColor="#FFFFFF"
            app:backgroundTint="@color/main100"
            app:cornerRadius="8dp"
            android:onClick="chooseFromGallery"/>

    </LinearLayout>

    <!-- BottomNavigationView is here to ensure it's at the bottom of the screen -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main70"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemIconTint="@color/main100"
        app:labelVisibilityMode="unlabeled"
        style="@style/BottomNavigationTheme"/>

</LinearLayout>
